<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_industry"
        android:layout_width="320dp"
        style="@style/MyTitle"
        android:text="@string/auth_title_company_sign_up_industry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chB_1"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_industry" />

    <CheckBox
        android:id="@+id/chB_2"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_2"
        app:layout_constraintStart_toStartOf="@+id/chB_1"
        app:layout_constraintTop_toBottomOf="@+id/chB_1" />

    <CheckBox
        android:id="@+id/chB_3"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_3"
        app:layout_constraintStart_toStartOf="@+id/chB_2"
        app:layout_constraintTop_toBottomOf="@+id/chB_2" />

    <CheckBox
        android:id="@+id/chB_4"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_4"
        app:layout_constraintStart_toStartOf="@+id/chB_3"
        app:layout_constraintTop_toBottomOf="@+id/chB_3" />

    <CheckBox
        android:id="@+id/chB_5"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_5"
        app:layout_constraintStart_toStartOf="@+id/chB_4"
        app:layout_constraintTop_toBottomOf="@+id/chB_4" />

    <CheckBox
        android:id="@+id/chB_6"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_6"
        app:layout_constraintStart_toStartOf="@+id/chB_5"
        app:layout_constraintTop_toBottomOf="@+id/chB_5" />

    <CheckBox
        android:id="@+id/chB_7"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_7"
        app:layout_constraintStart_toStartOf="@+id/chB_6"
        app:layout_constraintTop_toBottomOf="@+id/chB_6" />

    <CheckBox
        android:id="@+id/chB_8"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_8"
        app:layout_constraintStart_toStartOf="@+id/chB_7"
        app:layout_constraintTop_toBottomOf="@+id/chB_7" />

    <CheckBox
        android:id="@+id/chB_9"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_9"
        app:layout_constraintStart_toStartOf="@+id/chB_8"
        app:layout_constraintTop_toBottomOf="@+id/chB_8" />

    <CheckBox
        android:id="@+id/chB_10"
        style="@style/MyCheckBox"
        android:text="@string/auth_industry_10"
        app:layout_constraintStart_toStartOf="@+id/chB_9"
        app:layout_constraintTop_toBottomOf="@+id/chB_9" />

    <Button
        android:id="@+id/bt_next"
        style="@style/MyButton"
        android:text="@string/bt_next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
