<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bt_user"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:background="@drawable/shape_radius_32"
        android:elevation="8dp"
        android:padding="32dp"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/auth_user"
        android:textColor="@color/black"
        android:textSize="@dimen/big_label_24"
        app:layout_constraintEnd_toEndOf="@+id/bt_user"
        app:layout_constraintStart_toStartOf="@+id/bt_user"
        app:layout_constraintTop_toBottomOf="@+id/bt_user" />

    <ImageView
        android:id="@+id/bt_company"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_radius_32"
        android:elevation="8dp"
        android:padding="32dp"
        android:src="@drawable/ic_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/auth_company"
        android:textColor="@color/black"
        android:textSize="@dimen/big_label_24"
        app:layout_constraintEnd_toEndOf="@+id/bt_company"
        app:layout_constraintStart_toStartOf="@+id/bt_company"
        app:layout_constraintTop_toBottomOf="@+id/bt_user" />

    <ImageView
        android:id="@+id/bt_enter"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_radius_32"
        android:elevation="8dp"
        android:padding="32dp"
        android:src="@drawable/ic_enter"
        app:layout_constraintEnd_toEndOf="@+id/bt_company"
        app:layout_constraintStart_toStartOf="@+id/bt_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_user" />

    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/auth_exist"
        android:textColor="@color/black"
        android:textSize="@dimen/big_label_24"
        app:layout_constraintEnd_toEndOf="@+id/bt_enter"
        app:layout_constraintStart_toStartOf="@+id/bt_enter"
        app:layout_constraintTop_toBottomOf="@+id/bt_enter" />


</androidx.constraintlayout.widget.ConstraintLayout>
